/* Copyright 2025 The ModelarDB Contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package modelardb.flight.protocol;

message CreateTablesRequest {
  message NormalTableMetadata {
    string name = 1;
    bytes schema = 2;
  }

  message TimeSeriesTableMetadata {
    message ErrorBound {
      enum Type {
        ABSOLUTE = 0;
        RELATIVE = 1;
      }
      Type type = 1;
      float value = 2;
    }

    string name = 1;
    bytes schema = 2;
    repeated ErrorBound error_bounds = 3;
    repeated bytes generated_column_expressions = 4;
  }

  repeated NormalTableMetadata normal_tables = 1;
  repeated TimeSeriesTableMetadata time_series_tables = 2;
}
